# ccx

./: .gitattributes  .gitignore  .goreleaser.yaml  LICENSE  README.md  go.mod  main.go  pyproject.toml
.github/workflows/: release.yml  test.yml
ccx/: cli.py  clipboard.py  codex.py  cursor.py  parser.py  projects.py  render.py  sources.py
internal/cli/: cli.go  cli_test.go
internal/clipboard/: clipboard.go  clipboard_test.go
internal/parser/: parser.go  parser_test.go
internal/parser/testdata/: with_compaction.jsonl  with_uuids.jsonl
internal/picker/: picker.go  picker_test.go  tty_unix.go  tty_windows.go
internal/projects/: projects.go  projects_test.go
internal/render/: render.go  render_test.go
internal/render/testdata/: full_no_compaction.md  full_with_compaction.md  no_new_turns.md  update_slice.md
internal/state/: state.go  state_test.go
internal/style/: style.go
tests/: test_codex.py  test_cursor.py  test_parser.py
tests/fixtures/: codex_session.jsonl  codex_with_compaction.jsonl  no_compaction.jsonl
