[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccx-cli"
version = "0.2.0"
description = "Extract context from coding-agent sessions (Claude Code, Cursor, Codex CLI) for use in side agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Lucas Pfingsten Planells", email = "lucaspfingstenplanells@gmail.com" }]
keywords = ["claude", "claude-code", "context", "cli", "agents", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ccx = "ccx.cli:main"

[project.urls]
Homepage = "https://github.com/lucaspfingsten/ccx"
Issues = "https://github.com/lucaspfingsten/ccx/issues"
Source = "https://github.com/lucaspfingsten/ccx"

[tool.hatch.build.targets.wheel]
packages = ["ccx"]

[tool.hatch.build.targets.sdist]
include = ["ccx", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
